Fix Open Graph title for social media link previews - set to 'Johnson Marketing and Consulting Group'

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Marketing Website Design</title>
+      <title>Johnson Marketing and Consulting Group</title>
+      <!-- Open Graph / Social Media Meta Tags -->
+      <meta property="og:title" content="Johnson Marketing and Consulting Group" />
+      <meta property="og:description" content="Johnson Marketing and Consulting Group builds high-converting websites and full-funnel marketing systems with web development, SEO, GEO, Google Ads, Meta Ads, and business consulting for growth-focused brands." />
+      <meta property="og:type" content="website" />
+      <meta property="og:image" content="/apple-touch-icon.png" />
       <!-- Google Analytics 4 -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=G-2W0TYXDXF3"></script>
       <script>
